[BUGFIX] Improve viewport height handling with dynamic units
Replaced static viewport height units with dynamic viewport units to
address inconsistencies in how browsers handle viewport size changes.
Static units fail to adapt when browser UI components like the address
bar or tab bar change visibility or size, particularly on mobile devices
such as iOS, iPadOS, and Android.

While Android browsers respect the fixed-frame structure of the backend,
iPadOS calculates viewport heights as if scrolling were enabled, leading
to layout issues—especially in Safari with multiple tabs open.

By switching to dynamic viewport units, the layout now adjusts to
changes in browser controls, ensuring accurate spacing and accessibility
for all interface elements, even at the bottom of the screen.

Additionally, the view module’s maximum size calculation has been
updated to correctly account for the docheader. This ensures consistent
sizing across all views and improves alignment with the updated viewport
handling logic.

Resolves: #105958
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87790
Tested-by: core-ci <typo3@b13.com>
Tested-by: Benjamin Franzke <ben@bnf.dev>
Tested-by: Andreas Kienast <akienast@scripting-base.de>

--- a/typo3/sysext/workspaces/Resources/Public/Css/preview.css
+++ b/typo3/sysext/workspaces/Resources/Public/Css/preview.css
@@ -33,8 +33,8 @@
 .workspace-action .active-preview-mode{display:inline-block;text-align:start}
 .workspaces{position:relative}
 .workspaces iframe{border:0}
-.preview-mode-slider iframe{position:absolute;top:0;left:0;z-index:100;width:100%;height:calc(100vh - 50px);background-color:#fff}
+.preview-mode-slider iframe{position:absolute;top:0;left:0;z-index:100;width:100%;height:calc(100dvh - 50px);background-color:#fff}
 .preview-mode-slider #live-view{border-bottom:2px solid #c83c3c;z-index:200}
 .preview-mode-vbox iframe{width:50%;height:100%;float:var(--typo3-position-start)}
 .preview-mode-hbox iframe{width:100%;height:50%}
-#list iframe{height:calc(100vh - 50px)!important;width:100%}
+#list iframe{height:calc(100dvh - 50px)!important;width:100%}
